[package]
name = "ls"
version = "0.1.0"
edition = "2021"

authors = ["Jack"]
description = "A simple ls command written in Rust"
license = "MIT"
repository = "https://github.com/JackTheDevel0per/ls"
readme = "README.md"
homepage = "https://lemonlime.tech"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
